2013-03-12  Ramon Novoa  <rnovoa@artica.es>

	* bin/util/pandora_revent.exe: Added to repository. Compiled version of
	  pandora_revent.pl.

	* installer/pandora.mpi: Added pandora_revent.exe and curl.exe to the
	  installer.

2013-02-21  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_logevent.cc: Add the timestamp to the log.

2013-02-20  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_logevent.cc: Retrieve extra event information
	  for log modules.

2013-01-17  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module.cc,
	  modules/pandora_module.h,
	  modules/pandora_module_factory.cc,
	  modules/pandora_module_regexp.cc: Added support for log modules.

2012-12-12  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_logevent.cc: Changed the flags of
	  LoadLibraryEx. Fixes a bug when loading event descriptions
	  from exe files.

2012-11-20  Sergio Martin <sergio.martin@artica.es>

	* pandora_windows_service.h
	  pandora_windows_service.cc: Added support for
	gis_exec (Automatic gis coordinates)

2012-11-20  Sergio Martin <sergio.martin@artica.es>

	* pandora_windows_service.cc: Fixed some bugs
	of the type conversions 

2012-11-20  Sergio Martin <sergio.martin@artica.es>

	* pandora_windows_service.cc: Added support for
	custom fields

2012-11-20  Sergio Martin <sergio.martin@artica.es>

	* modules/pandora_module_factory.cc: Fix a few
	variable declaration bugs

2012-11-20  Sergio Martin <sergio.martin@artica.es>

	* modules/pandora_module_factory.cc: Added macros
	support to the module_exec command of the module
	configuration

2012-11-19  Sergio Martin <sergio.martin@artica.es>

	* pandora_windows_service.cc: Added new fields of 
	agent in XML header like custom_id and url_address.
	Added coordinates data (not gis_exec yet)

2012-11-19  Sergio Martin <sergio.martin@artica.es>
	
	* modules/pandora_module.h
	modules/pandora_module.cc: Fixed type conflicts in the
	last changes

2012-11-19  Sergio Martin <sergio.martin@artica.es>
